<package format="2">
  <name>platform_teleop</name>
  <version>1.0.0</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>  
</package>
